[build-system]
requires = ["hatchling", "hatch-vcs"]
build-backend = "hatchling.build"

[project]
name = "udsoncan"
dynamic = ["version"]
description = "Implementation of the Unified Diagnostic Service (UDS) protocol (ISO-14229) used in the automotive industry."
readme = "README.rst"
license = "MIT"
requires-python = ">=3.11"
authors = [
    { name = "Pier-Yves Lessard", email = "py.lessard@gmail.com" },
    { name = "Baptiste Pestoure", email = "bpestourie@gmail.com" },

]
keywords = ["14229", "automotive", "diagnostic", "iso-14229", "uds"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: POSIX :: Linux",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Topic :: Scientific/Engineering :: Interface Engine/Protocol Translator",
]

[project.optional-dependencies]
dev = ["autopep8", "coverage", "ipdb", "mypy"]
test = ["coverage", "mypy"]

[project.urls]
Homepage = "https://github.com/Hedwyn/python-udsoncan"

[tool.hatch.version]
source = "vcs"
